2013-06-21  Peter Bloomfield

	* src/sendmsg-window.c (create_email_or_string_entry),
	(create_string_entry), (create_email_entry), (create_from_entry),
	(create_info_pane): consolidate most size-group code.

2013-06-21  Peter Bloomfield

	* src/sendmsg-window.c (create_info_pane), (sw_attachment_list):
	use a GtkSizeGroup to restore alignment of attachment list.
	* src/sendmsg-window.h: new member size_group;

2013-06-21  Peter Bloomfield

	* src/sendmsg-window.c (drag_data_quote), (bsmsg2message),
	(send_message_handler): check for NULL tree-view.

2013-06-21  Peter Bloomfield

	* src/sendmsg-window.c (remove_attachment), (change_attach_mode),
	(show_attachment_widget), (add_attachment),
	(add_urlref_attachment), (create_info_pane), (sw_attachment_list),
	(sendmsg_window_new): put attachment list in its own pane.
	* src/sendmsg-window.h: add members tree_view and paned, and
	remove member attachments[].

2013-06-17  Peter Bloomfield

	* src/sendmsg-window.c (create_info_pane): allow the recipients
	widget and the attachments list to expand;
	(sendmsg_window_new): use a GtkPaned to allow the user to change
	the space allocated to the headers.

2013-06-10  Peter Bloomfield

	* src/save-restore.c (config_global_load): change default to
	UseSystemFonts=true.
	* src/balsa-app.c (balsa_app_init): ditto.

2013-06-09  Peter Bloomfield

	Add the option to use system fonts

	* src/balsa-app.h: new member gboolean use_system_fonts.
	* src/balsa-app.c (balsa_app_init): initialize it.
	* src/balsa-mime-widget-message.c (add_header_gchar): respect
	it.
	* src/balsa-mime-widget-text.c (balsa_mime_widget_new_text),
	(bm_modify_font_from_string): ditto.
	* src/pref-manager.c (open_preferences_manager), (apply_prefs),
	(attach_font_button), (preview_font_group),
	(use_system_fonts_cb): allow user to choose it.
	* src/save-restore.c (config_global_load), (config_save): save
	and restore it.
	* src/sendmsg-window.c (create_email_or_string_entry),